syntax = "proto3";

package scow.portal.vnc;

message LaunchDesktopRequest {
  string cluster = 1;
  string username = 2;
  uint32 display_id = 3;
}

message LaunchDesktopReply {
  string node = 1;
  string password = 2;
  uint32 port = 3;
}

message ListDesktopRequest {
  repeated string clusters = 1;
  string username = 2;
}


message ListDesktopReply {
  message Connection{
    string node = 1;
    string cluster_name = 2;
    string cluster_id = 3;
    repeated uint32 display_id = 4;
  }
  repeated Connection connection = 1;
}

message CreateDesktopRequest {
  string cluster = 1;
  string username = 2;
}

// RESOURCE_EXHAUSTED: if VNC desktop reaches maximum, the details is the already/maximum.
message CreateDesktopReply {
  string node = 1;
  string password = 2;
  uint32 port = 3;
}

message KillDesktopRequest {
  string cluster = 1;
  string username = 2;
  uint32 display_id = 3;
}

message KillDesktopReply {
}


message RefreshOTPPasswordRequest {
  string cluster = 1;
  string username = 2;
  string node = 3;
  uint32 display_id = 4;
}

// NOT_FOUND: node is not found, display_id is not found
message RefreshOTPPasswordReply { string password = 1; }

service VncService {
  rpc LaunchDesktop(LaunchDesktopRequest) returns (LaunchDesktopReply);
  rpc ListDesktop(ListDesktopRequest) returns (ListDesktopReply);
  rpc CreateDesktop(CreateDesktopRequest) returns (CreateDesktopReply);
  rpc KillDesktop(KillDesktopRequest) returns (KillDesktopReply);
  rpc RefreshOTPPassword(RefreshOTPPasswordRequest)
      returns (RefreshOTPPasswordReply);
}
